--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,32 @@
 body {
   font-family: 'Raleway', sans-serif;
+  transition: background-color 0.2s;
 }
+
+.bg-default {
+  background-color: #fafafa;
+}
+
+.bg-primary {
+  background-color: #0088cc;
+}
+
+.bg-info {
+  background-color: #49afcd;
+}
+
+.bg-success {
+  background-color: #5bb75b;
+}
+
+.bg-warning {
+  background-color: #faa732;
+}
+
+.bg-danger {
+  background-color: #da4f49;
+}
+
 
 .header {
   background: #fafafa;
