--- a/partials/settings.html
+++ b/partials/settings.html
@@ -1,1 +1,20 @@
-<h3>Activities Settings</h3>
+<div class="panel panel-default panel-narrow panel-flat center-block">
+  <div class="panel-heading">
+    <h3 class="panel-title">Activities Settings</h3>
+  </div>
+  <div class="panel-body">
+    <ul class="list-group list-group-flat">
+      <li ng-repeat="activity in activities" class="list-group-item clearfix">
+        <div class="activity-btn-preview-box">
+          <button class="button button-xlarge button-{{activity.color}} center-block"><span>{{activity.name}}</span></button>
+        </div>
+        <div class="pull-right text-left activity-edit-form">
+          <label>Name: <input type="text" ng-model="activity.name"></label><br>
+          <label>Color: <select ng-model="activity.color" ng-options="value for value in availableCssClasses"></select></label>
+          <button ng-click="removeActiviry(activity)" class="btn btn-xs btn-danger"><i class="fa fa-trash-o"></i></button>
+        </div>
+      </li>
+    </ul>
+    <button class="btn btn-default" ng-click="addNew()">Add New</button>
+  </div>
+</div>
