--- a/partials/main.html
+++ b/partials/main.html
@@ -1,6 +1,6 @@
 <ul class="button-list">
   <li ng-repeat="activity in activities">
-    <button ng-click="setCurrentActivity(activity)" class="button button-xlarge button-{{activity.cssClass}}" ng-class="{'is-active': currentActivity==activity}">{{activity.name}}</button>
+    <button ng-click="setCurrentActivity(activity)" class="button button-xlarge button-{{activity.color}}" ng-class="{'is-active': currentActivity==activity}">{{activity.name}}</button>
   </li>
 </ul>
 <div ng-flip-clock></div>
