--- a/css/main.css
+++ b/css/main.css
@@ -7,27 +7,27 @@ body {
   text-align: center;
 }
 
-.bg-default {
+.color-default {
   background-color: #fafafa;
 }
 
-.bg-primary {
+.color-primary {
   background-color: #0088cc;
 }
 
-.bg-info {
+.color-info {
   background-color: #49afcd;
 }
 
-.bg-success {
+.color-success {
   background-color: #5bb75b;
 }
 
-.bg-warning {
+.color-warning {
   background-color: #faa732;
 }
 
-.bg-danger {
+.color-danger {
   background-color: #da4f49;
 }
 
