Change structure a little bit

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,4 +3,4 @@
     <button ng-click="setCurrentActivity(activity)" class="button button-xlarge button-{{activity.color}}" ng-class="{'is-active': currentActivity==activity}">{{activity.name}}</button>
   </li>
 </ul>
-<div ng-flip-clock></div>
+<div flip-clock></div>
