Add anumation to settings

--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -4,7 +4,7 @@
   </div>
   <div class="panel-body">
     <ul class="list-group list-group-flat">
-      <li ng-repeat="activity in activities" class="list-group-item clearfix">
+      <li ng-repeat="activity in activities" class="list-group-item clearfix activity-list-animation">
         <div class="activity-btn-preview-box">
           <button class="button button-xlarge button-{{activity.color}} center-block"><span>{{activity.name}}</span></button>
         </div>
